crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_kind_card_frozen.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_kind_card(RowKind::Frozen)"
---
variant=Frozen
label=frozen
glyph=🧊
ratatui_style=fg=Cyan mod=NONE
needs_attention=false
