crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_kind_card_idle_is_zzz.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_kind_card(RowKind::Idle)"
---
variant=Idle
label=idle
glyph=💤
ratatui_style=fg=DarkGray mod=DIM
needs_attention=false
