crates/cosmon-cli/tests/snapshots/peek_snapshot__peek_kind_card_parked_deprecated.snap
---
source: crates/cosmon-cli/tests/peek_snapshot.rs
expression: "render_kind_card(RowKind::Parked)"
---
variant=Parked
label=parked
glyph=💤
ratatui_style=fg=Yellow mod=NONE
needs_attention=false
